initial commit for bulk of the work
